--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,21 +1,22 @@
 name: publish
 on: [push]
 jobs:
-  publish-hello-docker-image:
+  login:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.TOKEN_DOCKER_HELLOWORLD }}
-      - name: Build the hello-docker Docker image
-        run: |
-         docker build . --tag ghcr.io/roobann/docker-helloworld:latest
-         docker run ghcr.io/roobann/docker-helloworld:latest
-         docker push ghcr.io/roobann/docker-helloworld:latest
-      - name: Image pushed
-        run: echo "pushed"
+      - if: true
+        run: echo "TAG=latest" >> $GITHUB_ENV
+      - name: Build & Push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./build
+          file: ./build/Dockerfile
+          push: true
+          tags: ghcr.io/${{ github.repository }}:${{ env.TAG }}
         
