--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,8 +15,7 @@ jobs:
       - name: Build & Push
         uses: docker/build-push-action@v2
         with:
-          context: ./build
-          file: ./build/Dockerfile
+          file: ./Dockerfile
           push: true
           tags: ghcr.io/${{ github.repository }}:${{ env.TAG }}
         
