--- a/nginx.conf
+++ b/nginx.conf
@@ -14,10 +14,13 @@ http {
         listen 80;
 
         location / {
+			root /www/data;
         }
-	location /app1 {
+		location /app1 {
+			root /www/data;
         }
         location /app2 {
+			root /www/data;
         }
     }
 }
