--- a/nginx.conf
+++ b/nginx.conf
@@ -12,13 +12,13 @@ http {
         listen 80;
 
         location / {
-			root /www/data;
+	root /www/data;
         }
 		location /app1 {
-			root /www/data;
+			alias /www/data;
         }
         location /app2 {
-			root /www/data;
+			alias /www/data;
         }
     }
 }
