--- a/nginx.conf
+++ b/nginx.conf
@@ -15,10 +15,10 @@ http {
 	root /www/data;
         }
 		location /app1 {
-			alias /www/data;
+			root /www/data;
         }
         location /app2 {
-			alias /www/data;
+			root /www/data;
         }
     }
 }
